# definitely_not_window

./: .metadata  LICENSE  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: main.cpp
lib/: definitely_not_window.dart
lib/src/: window.dart
lib/src/platform/: base_window.dart  method_channel.dart  window_platform_interface.dart
lib/src/windows/: native_api.dart  win32_plus.dart  window.dart  window_util.dart  windows_platform_interface.dart
windows/: CMakeLists.txt  api.cpp  api.h  common.h  definitely_not_window.cpp  definitely_not_window.h  definitely_not_window_plugin.cpp  window_util.h
windows/include/definitely_not_window/: definitely_not_window_plugin.h
